adjust index to adjust alignment of hero title to be centered correctly. adjusted other styling pages to become more simplistic and understandable

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,4 +61,19 @@
         flex-direction: column;
     }
 
+    .left-part {
+        align-items: center; 
+        width:inherit;
+        align-content: center;
+    }
+
+    .title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero-title { 
+        text-align: center;
+    }
 }
